--- a/1/new_hospital/css/journalismDetail.css
+++ b/1/new_hospital/css/journalismDetail.css
@@ -1,12 +1,12 @@
 .wrap{
   width: 100%;
-  background: url('../images/bg.jpg') no-repeat;
+  background: #f6f6f9;
   background-position: center;
   background-attachment: fixed;
 }
 .wrap .center {
-    width: 1230px;
-    margin: 30px auto;
+    width: 1200px;
+    margin: 0 auto 60px;
   }
   .wrap .center .Breadcrumb span, .wrap .center .Breadcrumb span a{
     font-size: 14px;
@@ -17,12 +17,13 @@
     cursor: pointer;
   }
   .wrap .center .container {
-    margin-top: 46px;
     display: flex;
     justify-content: space-between;
+    
   }
   .wrap .center .container .l_box {
-    width: 860px;
+    width: 70%;
+    background: #fff;
   }
   .wrap .center .container .l_box .l_top{
     width: 100%;
@@ -46,7 +47,7 @@
     color: #333333;
     font-weight: bold;
     padding-bottom: 21px;
-    text-align: left;
+    text-align: center;
   }
   .wrap .center .container .l_box .row {
     display: flex;
@@ -56,6 +57,7 @@
   .wrap .center .container .l_box .row .time {
     font-size: 14px;
     color: #999999;
+    margin: 0 auto;
   }
   .wrap .center .container .l_box .row .time span{
     margin-left: 50px;
@@ -132,16 +134,16 @@
     color: #815b3f;
   }
   .wrap .center .container .r_box {
-    width: 344px;
+    width: 25%;
+    background: #fff;
+    padding: 34px;
   }
   .wrap .center .container .r_box .trends {
-    width: 100%;
-    height: 190px;
-    line-height: 190px;
-    text-align: center;
-    font-size: 36px;
-    color: #815b3f;
-    background: url('../images/news_top.jpg') no-repeat;
+    font-size: 24px;
+    font-weight: bold;
+    color: #2f3342;
+    padding-bottom: 22px;
+    border-bottom: 1px solid #eeeeee;
   }
   .wrap .center .container .r_box .text {
     padding: 18px;
@@ -163,19 +165,22 @@
   }
 
   .wrap .center .container .r_box .middle{
-    padding: 18px 15px;
+    /* padding: 18px 15px;
     background: rgba(255,255,255,.8);
     border: 1px solid #ccc;
     border-top: none;
     height: 48px;
     font-size: 0;
-    letter-spacing: -1.5em;
+    letter-spacing: -1.5em; */
+    font-size: 16px;
+    color: #2f3342;
+    margin-top: 30px;
   }
   .wrap .center .container .r_box .middle::after{
-    content: '';
+    /* content: '';
     display: inline-block;
     vertical-align: middle;
-    height: 100%;
+    height: 100%; */
   }
   .wrap .center .container .r_box .middle a{
     display: inline-block;
@@ -188,7 +193,7 @@
   }
   .wrap .center .container .r_box .middle:hover a{
     cursor: pointer;
-    color: #815b3f;
+    color: #3399ff;
   }
   .article table {
     width: 100%;
