--- a/1/new_hospital/css/journalismDetail.css
+++ b/1/new_hospital/css/journalismDetail.css
@@ -47,7 +47,7 @@
     color: #333333;
     font-weight: bold;
     padding-bottom: 21px;
-    text-align: center;
+    text-align: left;
   }
   .wrap .center .container .l_box .row {
     display: flex;
