--- a/1/new_hospital/css/header.css
+++ b/1/new_hospital/css/header.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'PingFangSC,PingFangSC-Regular,SFProText,PingFang,"Microsoft YaHei","微软雅黑",STHeiti,"WenQuanYi Micro Hei",SimSun,sans-serif';
+    -webkit-font-smoothing:antialiased;
+}
 .header{
     width: 100%;
     position: sticky;
@@ -56,7 +60,7 @@
     border-radius: 2px;
     outline: none;
     top: 100%;
-    box-shadow: -2px -2px 5px rgb(0 0 0 / 6%);
+    box-shadow: 0px 2px 10px rgb(0 0 0 / 20%);
     border-radius: 3px;
     display: none;
     -webkit-transition: all 0.3s;
@@ -168,7 +172,7 @@
     display: flex;
 }
 .contSix .footerBar .box-wrap   .lBox .column{
-    width: 35%;
+    width: 20%;
 }
 .contSix .footerBar .box-wrap   .lBox .column .title{
     font-size: 16px;
@@ -184,6 +188,20 @@
 .contSix .footerBar .box-wrap   .lBox .column .text:hover{
     color: #fff;
     cursor: pointer;
+}
+.contSix .footerBar .box-wrap   .lBox .column.product{
+    width: 50%;
+    overflow: hidden;
+}
+.contSix .footerBar .box-wrap   .lBox .column.product .box{
+    overflow: hidden;
+}
+.contSix .footerBar .box-wrap   .lBox .column.product .box .text{
+    width: 50%;
+    float: left;
+}
+.contSix .footerBar .box-wrap   .lBox .column:last-child{
+    margin-left: 60px;
 }
 .contSix .footerBar .box-wrap .rBox{
     width: 40%;
