--- a/1/new_hospital/css/home.css
+++ b/1/new_hospital/css/home.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 450px;
   /* height: 570px; */
+  background: #999;
 }
 .wrapper .center .banner .swiper-container {
   width: 100%;
@@ -357,20 +358,22 @@
 }
 .caseBanner .swiper-container-case .swiper-slide .box .img{
   width: 100%;
-  height: 165px;
-  border-bottom: 1px solid #ccc;
+  /* height: 165px;
+  border-bottom: 1px solid #ccc; */
 }
 .caseBanner .swiper-container-case .swiper-slide .box .img img{
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 .caseBanner .swiper-container-case .swiper-slide .box .caseCont{
-  padding: 17px;
+  padding: 10px;
 }
 .caseBanner .swiper-container-case .swiper-slide .box .caseCont .imgs{
-  max-width: 142px;
+  /* width: 142px !important;
+  max-width: 142px; */
   height: 36px;
+  margin-bottom:10px;
 }
 .caseBanner .swiper-container-case .swiper-slide .box .caseCont .imgs img{
   /* width: 100%;
@@ -381,8 +384,7 @@
 .caseBanner .swiper-container-case .swiper-slide .box .caseCont .textRow{
   font-size: 14px;
   color: #626775;
-  font-weight: bold;
-  padding: 17px 0;
+  /* font-weight: bold; */
 }
 .caseBanner .swiper-container-case .swiper-slide .box .caseCont .title{
   text-align: left;
@@ -395,7 +397,14 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-
+.caseBanner .swiper-container-case .swiper-slide .box .caseCont .row .key{
+  font-size: 12px;
+  color: #666;
+  padding: 5px;
+  background: #eee;
+  border-radius: 2px;
+  margin-top: 5px;
+}
 
 .advertPlate{
   display: flex;
